--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.128.0",
     "langchain>=1.2.7",
     "langchain-groq>=1.1.1",
     "langgraph>=1.0.7",
