--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "langchain>=1.2.7",
     "langchain-groq>=1.1.1",
     "langgraph>=1.0.7",
